feat: complete active email
